Add some selenium tests.

--- a/pom.xml
+++ b/pom.xml
@@ -113,8 +113,40 @@
                 <groupId>com.intuit.karate</groupId>
                 <artifactId>karate-junit4</artifactId>
                 <version>0.6.1</version>
-
             </dependency>
+
+
+        <!--SELENIUM DEPENDENCY       -->
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
+        <!--Junit-Jupiter DEPENDENCY       -->
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--Guava DEPENDENCY       -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.1</version>
+        </dependency>
 
     </dependencies>
 
